# Marsha

./: .gitignore  .gitmodules  .readthedocs-custom-steps.yml  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  control_gui.py  depth_cam_service  index.rst  instal.sh  install.sh  install_ros.bash  links.py  marsha_service  mission_service  package.xml  requirements2.txt  requirements3.txt  school.py  service  setup.py  tundra.urdf  util.py
AI/: server.py
ar_mini/: CMakeLists.txt  package.xml
arm2d2/arm2d2_hardware/: CMakeLists.txt  package.xml
arm2d2/arm2d2_hardware/config/: controllers.yaml  joint_config.yaml
arm2d2/arm2d2_hardware/launch/: arm2d2.launch  arm2d2_hardware_bringup.launch
marsha_ai/: CMakeLists.txt  package.xml  setup.py
marsha_ai/config/: dirs.yaml  hyper_parameters.yaml  hyperparameters.yaml  mdp_hyperparameters.yaml  poses.yaml  td3_hyperparameters.yaml  trajectory_predictor.yaml
marsha_ai/include/marsha_ai/: kalman_filter.h  object_dynamics.h
marsha_ai/launch/: ai_bringup.launch  object_detect_2.launch  run_td3_catch.launch  simulate.launch  single_arm.launch  spawn_pickup.launch  train_ai.launch  train_td3_catch.launch
marsha_ai/msg/: Pose.msg
marsha_ai/nodes/: ai_node  ai_pcs  grasp_generator.cpp  handoff_sm  mdp_ai_node  move_interface.cpp  spawn_tensorboard  trajectory_predictor.cpp  trajectory_predictor_kalman.cpp
marsha_ai/scripts/: ai_node  cmd_state  cmd_state_machine  move_interface  state_node  state_node.py
marsha_ai/src/: learn_dynamics  pick_place.cpp  pick_place_t.cpp  task_test.cpp
marsha_ai/src/marsha_ai/: callbacks.py  catch_interface.py  gym_env.py  meta_td3.py  move_interface_old  ros_interface.py  throw_interface.py  util.py
marsha_ai/srv/: PositionCmd.srv  StateComm.srv
marsha_ai/tests/: test_move_interface  test_object_dynamics.cpp  test_trajectory_predictor
marsha_ai/training/logs/: evaluations.npz
marsha_core/: CMakeLists.txt  package.xml  setup.py
marsha_core/config/: PCS.yaml  poses.yaml
marsha_core/include/: move_interface.h
marsha_core/launch/: gripper.launch  handoff.launch  left_mission.launch  mini.launch  mission.launch  right_mission.launch  satlab_net.machine  sim_fms.launch  simulate.launch  single_arm.launch
marsha_core/launch/gripper_moveit_config/: move_group.launch  ompl_planning_pipeline.launch.xml
marsha_core/launch/moveit_config/: move_group.launch
marsha_core/nodes/: grip_interface.cpp  handoff_sm  led_cmd  left_pcs  mission_sm  move_interface.cpp  payload_command_system  rbf_detect  record_longeron  right_pcs  soft_robotics_telem  te_detect  telemetry_downlink
marsha_core/scripts/: btn  catch  catch_ball  cmd_state  dumb_catch  execute_grasp  follow_ball  get_state  gpio.py  joint_radians  led_test  motor.py  obj_measure  pickup_moving_object  throw
marsha_core/src/: grasp_generator.cpp  move_interface_v2.cpp
marsha_detection/: CMakeLists.txt  package.xml  setup.py
marsha_detection/config/: measurement_parameters.yaml
marsha_detection/launch/: test_record.launch  train.launch  train.sh
marsha_detection/nodes/: detect_object  locate  record  record_longeron
marsha_detection/scripts/: fix_truncated.py  locate  marsha_locate.py  print_velocity  record  smoother  train  view
marsha_gazebo/: CMakeLists.txt  package.xml  setup.py
marsha_gazebo/config/: marsha_gazebo_controllers.yaml
marsha_gazebo/launch/: ar3_gazebo_bringup.launch  panda_pickup.launch  pickup.launch  pickup_setup.launch  spawn_balls.launch  spawn_pickup.launch
marsha_gazebo/nodes/: acceleration  grasped_state_server.cpp  multi_object_location  object_location  reset  tf_gripper_transform
marsha_gazebo/scripts/: add_velocity  republish_obj_estimate
marsha_gazebo/src/: auto_domain_randomization.py  tf_world_transform.py
marsha_hardware/: CMakeLists.txt  package.xml  setup.py
marsha_hardware/DiabloArduino/: Diablo.cpp  Diablo.h  DiabloStepper.h
marsha_hardware/JetSerial/: ser.py
marsha_hardware/StepperControl/: StepperControl.ino
marsha_hardware/config/: controllers.yaml  hardware_interface.yaml  stepper_calibration.yaml
marsha_hardware/include/: marsha_hardware_interface.h  marsha_hardware_interface.hpp
marsha_hardware/launch/: ar3_bringup.launch  hardware_comm.launch  marsha_hardware_bringup.launch  test_hardware.launch
marsha_hardware/msg/: StepControl.msg
marsha_hardware/nodes/: diablo_controller  marsha_hardware_interface_node.cpp
marsha_hardware/scripts/: pub_step  serial_test  serial_test.py  teensy_interface  telemetry_downlink
marsha_hardware/serial_test/: serial_test.ino
marsha_hardware/src/: ar3_hardware_interface.cpp  arm2d2_hardware_interface.cpp  marsha_hardware_driver.cpp  marsha_hardware_interface.cpp  marsha_hardware_interface_node.cpp  pub_step  trajectory_test.py
marsha_hardware/stepper_test/: stepper_test.ino
marsha_msgs/: CMakeLists.txt  package.xml
marsha_msgs/action/: PositionCmd.action
marsha_msgs/msg/: ObjectEstimate.msg  Polar.msg  TeensyMsg.msg  Timer.msg
marsha_msgs/srv/: GenerateGrasp.srv  GetDepth.srv  GetFrame.srv  GetPosFrame.srv  JointCmd.srv  MoveCmd.srv  ObjectObservation.srv  PayloadCmd.srv  PlanGrasp.srv  PostureCmd.srv  PredictPosition.srv  Reset.srv  StateComm.srv
marsha_nn_controller/: .gitmodules  CMakeLists.txt  README.md  package.xml
marsha_nn_controller/launch/: move_group.launch  simulate.launch  single_arm.launch
marsha_nn_controller/src/: listener.py  move_group.cpp  pid.py  tf_test.py
tundra_gripper/: CMakeLists.txt  package.xml
tundra_gripper/config/: gripper_gazebo.srdf  joint_limits.yaml  kinematics.yaml  left_gripper_controllers.yaml  moveit.rviz  poses.yaml  right_gripper_controllers.yaml
tundra_gripper/launch/: gripper.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml
tundra_gripper/meshes/: Actuator2.stl  actuator_1.stl  actuator_1_2.stl  actuator_2.stl  actuator_2_1.stl  actuator_3.stl  actuator_3_1.stl  ar3_mount.stl  base_link.stl  gripper_link.STL  gripper_palm.STL
tundra_gripper/nodes/: grip_interface.cpp
tundra_gripper/urdf/: gripper.urdf.xacro
(+973 files in other folders)
