<package>

  <name>ar_mini</name>
  <version>0.0.0</version>
  <description> Moveit package for the ar_mini
  </description>
  <author email="aborger@nnu.edu">Aaron Borger</author>
  <maintainer email="aborger@nnu.edu">Aaron Borger</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/aborger/marsha</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_kinematics</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>moveit_setup_assistant</run_depend>
  <run_depend>moveit_simple_controller_manager</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>xacro</run_depend>

  <run_depend>ar_mini_description</run_depend>


</package>