<?xml version="1.0"?>
<package format="2">
  <name>marsha_detection</name>
  <version>0.0.0</version>
  <description>Programs part of the marsha project responsible for the object detection</description>

  <maintainer email="borger.aaron@gmail.com">Aaron Borger</maintainer>
  <author email="aborger@nnu.edu">Aaron Borger</author>
  <author email="colemccall@nnu.edu">Cole McCall</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>