<?xml version="1.0"?>
<package format="2">
    <name>marsha_hardware</name>
    <version>0.0.0</version>
    <description>Controls the hardware for marsha</description>

    <maintainer email="borger.aaron@gmail.com">Aaron Borger</maintainer>
    
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>


    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>hardware_interface</build_depend>
    <build_depend>controller_manager</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>message_generation</exec_depend>
    <exec_depend>hardware_interface</exec_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>control_msgs</exec_depend>

    <export>

    </export>

</package>
