<?xml version="1.0"?>
<package format="2">
  <name>marsha_msgs</name>
  <version>0.0.0</version>
  <description>The marsha_msgs package</description>


  <maintainer email="borger.aaron@gmail.com">Aaron Borger</maintainer>
  <author email="aborger@nnu.edu">Aaron Borger</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <export>

  </export>

</package>
