<?xml version="1.0"?>
<package format="2">
  <name>tundra_gripper</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for tundra_gripper</p>
    <p>This package contains configuration data, 3D models and launch files
for ar3 robot</p>
  </description>
  <author>Aaron Borger</author>
  <maintainer email="borger.aaron@gmail.com" />
  <license>GNU</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>marsha_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>moveit_core</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
	<build_export_depend>marsha_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
	<exec_depend>marsha_msgs</exec_depend>


  <export>
  </export>
</package>